--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,7 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
+      - AWS_DEFAULT_REGION=us-west-2
       - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
       - REPOSITORY_URI=655003324290.dkr.ecr.us-west-2.amazonaws.com/app-music
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
